# src/models/documents.model.ts
@@ -7,17 +7,30 @@ import {queryDate} from "../handlers/dateTime/queryDate";
 export class Document {
   id?: Id;
   uuid?: UUID;
-  name?: string;
   companyId?: Id;
-  path?: string;
   refId?: Id;
-  description?: string;
   moduleId?: Id;
+  name?: string;
+  description?: string;
+
+  // relative path from folder
+  path?: string;
   fileType?: string;
+  size?: number;
   createdAt?: Date;
   deletedAt?: Date;
   version?: number;
   updatedAt?: Date;
+}
+
+export const defaultDocument: Document = {
+  companyId: null,
+  name: null,
+  path: null,
+  refId: null,
+  description: null,
+  moduleId: null,
+  fileType: null
 }
 
 export async function getById(id: Id) {
@@ -33,12 +46,24 @@ export async function create(document: Document) {
   return await query(`
       INSERT INTO documents(uuid,
                             name,
-                            company_id)
-      VALUES (?, ?, ?)
+                            company_id,
+                            path,
+                            ref_id,
+                            description,
+                            module_id,
+                            file_type,
+                            file_size)
+      VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)
   `, [
     document.uuid,
     document.name,
-    document.companyId
+    document.companyId,
+    document.path,
+    document.refId,
+    document.description,
+    document.moduleId,
+    document.fileType,
+    document.size,
   ]);
 }
 
@@ -55,12 +80,12 @@ export async function update(id: Id, document: Document) {
 }
 
 export async function logicDelete(id: Id) {
-    const now = queryDate(new Date());
-    return await query(`
-        UPDATE documents t
-        SET t.deleted_at = "${now}"
-        WHERE t.id = ?;
-    `, [id]);
+  const now = queryDate(new Date());
+  return await query(`
+      UPDATE documents t
+      SET t.deleted_at = "${now}"
+      WHERE t.id = ?;
+  `, [id]);
 }
 
 
